--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 PORT=3000
 
 # URL of the Mongo DB
-MONGODB_URL=mongodb://ueizwruc63pi4t7xjvte:Ms32zuRLbl79VzVhTJ8J@n1-c2-mongodb-clevercloud-customers.services.clever-cloud.com:27017,n2-c2-mongodb-clevercloud-customers.services.clever-cloud.com:27017/bvjhkzeh1vlbjlm?replicaSet=rs0
+MONGODB_URL=mongodb://u70lq2dxkoceg5obdxec:3sNe1chVJHOaJEXvX9Zi@n1-c2-mongodb-clevercloud-customers.services.clever-cloud.com:27017,n2-c2-mongodb-clevercloud-customers.services.clever-cloud.com:27017/bxzv0koujo5xkkt?replicaSet=rs0
 
 # JWT
 # JWT secret key
